@@ -8,8 +8,10 @@ use aliased 'App::PerlWatcher::UI::Gtk2::Widgets::CellRendererActivatablePixbuf'
 use aliased 'App::PerlWatcher::Level' => 'Level', qw/:levels/;
 use App::PerlWatcher::Openable;
 use App::PerlWatcher::UI::Gtk2::Utils qw/get_level_icon get_icon/;
+use App::PerlWatcher::UI::Gtk2::URLOpener;
 use Devel::Comments;
 use Gtk2;
+use List::Util qw/first/;
 use POSIX qw(strftime);
 
 use base 'Gtk2::TreeView';
@@ -19,8 +21,15 @@ sub new {
     my ($tree_store, $app) = @_;
     # create an entry
     my $self = Gtk2::TreeView->new($tree_store);
-    $self -> {_tree_store   } = $tree_store;
-    $self -> {_app          } = $app;
+    my $open_delay = $app->config->{open_url_delay} // 1;
+    my $url_opener = App::PerlWatcher::UI::Gtk2::URLOpener->new(
+        delay    => $open_delay,
+        callback => sub { $self->_unmark_opening(shift); },
+    );
+    $self->{_tree_store   } = $tree_store;
+    $self->{_app          } = $app;
+    $self->{_url_opener   } = $url_opener;
+
     bless $self, $class;
     $self->_construct;
     return $self;
@@ -33,6 +42,30 @@ sub _is_unseen {
     #my $r = $status->timestamp > $last_seen;
     my $r = $self->{_tree_store}->shelf->status_changed($status);
     return $r;
+}
+
+
+sub _unmark_opening {
+    my ($self, $openables) = @_;
+
+};
+
+sub _open_url {
+    my ($self, $openable) = @_;
+    $self->{_url_opener}->delayed_open($openable);
+}
+
+sub _get_status_icon {
+    my ($self, $status) = @_;
+    return get_level_icon($status->level, $self->_is_unseen($status));
+}
+
+sub _get_openable_icon {
+    my ($self, $openable) = @_;
+    my $is_opening = first { $_ == $openable }
+        @{ $self->{_url_opener}->openables };
+    my $icon_name = $is_opening ? 'opening-link' : 'open-link';
+    return get_icon($icon_name);
 }
 
 sub _construct {
@@ -57,7 +90,7 @@ sub _constuct_actions_column {
             my $value = $model->get_value( $iter, 0 );
             my $pixbuff =
                 $value->does('App::PerlWatcher::Openable')
-                ? get_icon("open-link")
+                ? $self->_get_openable_icon($value)
                 :  undef;
             $cell->set(pixbuf => $pixbuff)
         }
@@ -67,13 +100,9 @@ sub _constuct_actions_column {
             ### got activation signal
             my ( $cell, $path ) = @_;
             my $iter = $model->get_iter_from_string($path);
-            $model->get_value( $iter, 0 )->open_url;
+            my $openable = $model->get_value( $iter, 0 );
+            $self->_open_url($openable);
     });
-}
-
-sub _get_status_icon {
-    my ($self, $status) = @_;
-    return get_level_icon($status->level, $self->_is_unseen($status));
 }
 
 sub _constuct_icon_column {
