@@ -1,5 +1,8 @@
 {{$NEXT}}
-    New configuration options: hide_on_startup, hide_from_taskbar
+    New configuration options: hide_on_startup, hide_from_taskbar, open_url_delay
+    Openable links are now opened with delay to improve usability
+        
+
 0.05      2013-08-18 17:19:38 Europe/Minsk
     Just reflect changes in Engine
 
